samples/_failures_safe/1761179476_00f1a2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e4901551.c: In function ‘main’:
./samples/SAFE/__tmp_e4901551.c:184:9: error: expected declaration or statement at end of input
  184 |         if (input[0] == 'u' || input[0] == 'U') {
      |         ^~
./samples/SAFE/__tmp_e4901551.c:184:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e4901551.c:184:9: error: expected declaration or statement at end of input
